Update documentation for included server startup scripts and java9args.txt